0028927: Visualization - Graphic3d_StructureManager destructor should invalidate its pointer in Graphic3d_Structure

Graphic3d_Structure::myFirstStructureManager - removed unused class field.
~Graphic3d_StructureManager() now removes displayed Structures explicitly.